# SongList

./: CMakeLists.txt  GenerateSourceGroups.cmake  songlist
src/: main.cpp  songdialog.cpp  songdialog.h  songdialog.ui  songlistdialog.cpp  songlistdialog.h  songlistdialog.ui
